--- a/liff_calendar_v2/index.html
+++ b/liff_calendar_v2/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>シンプルなカレンダー</title>
     <link rel="stylesheet" href="style.css">
+    <script charset="utf-8" src="https://static.line-scdn.net/liff/edge/versions/2.22.3/sdk.js"></script>
 </head>
 <body>
     <div class="calendar-container">
@@ -32,6 +33,8 @@
         <div id="selected-date-info">
             選択された日付: <span id="selected-date-value">未選択</span>
         </div>
+        <!-- 日時送信ボタン -->
+        <button id="send-date-button" disabled>日時をLINEに送信</button>
     </div>
 
     <script src="script.js"></script>
